<resources>
    <string name="app_name">UTSHIP</string>
    <string name="title_order">Order</string>
    <string name="title_cat">Category</string>
    <string name="title_dashboard">Home</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_wishlist">Wishlist</string>
    <string name="title_profile">Profile</string>
    <string name="lbl_logout_confirmation">Are you want to logout?</string>
    <!-- Facebook Auth-->
    <string name="facebook_app_id">FACEBOOK_APP_ID</string>
    <string name="fb_login_protocol_scheme">fb1050752855727748</string>

    <!-- Google Auth-->
    <string name="google_backend_id">AIzaSyA9Q5KpKw3FYetSoIhgjwPd20wzF8i0PhI</string>

    <!-- Google Map -->
    <string name="google_map_api_key">AIzaSyA9Q5KpKw3FYetSoIhgjwPd20wzF8i0PhI</string>

    <string name="title_wallet">Wallet</string>
    <string name="title_statics">Statistics</string>
    <string name="title_team">Team</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="updatemessage"><font color="#0d3848">This is old version and does not operate. Please update application</font></string>
    <string name="newupdate"><font color="#0d3848">New update available</font></string>
    <string name="footerprivacy">Registration means that you agree to Ping terms.\nTerms and Condition and Privacy Policy.</string>
    <string name="footerprivacyregistration">Registering means that you agree to Ping Money</string>
    <string name="internetdisconnect">Oops looks like there’s a problem - check your internet connection</string>
    <string name="email">Your email address</string>
    <string name="forgot">Your userid address</string>
    <string name="oldpassword">Old password</string>
    <string name="newpassword">New password</string>
    <string name="password">Your password</string>
    <string name="retypepassword">Confirm password</string>
    <string name="retrivepassword">Retrieve Password</string>
    <string name="subject">Subject</string>
    <string name="description">Description</string>
    <string name="attachment">Attachment</string>
    <string name="sendmail">Send mail</string>
    <string name="skip">Skip</string>
    <string name="version">Version 1.0.0</string>
    <string name="passwordchangemsg">Password has been updated successfully</string>
    <string name="forgotpasswordtagline">We will send you a confirmation email,\nso enter your correct email address.</string>
    <string name="forgotpassword">Forgot password?</string>
    <string name="or">Or</string>
    <string name="signinwith">Or sign in with</string>
    <string name="oldpasswordvalidtext">Enter old password</string>
    <string name="newpasswordvalidtext">Enter new password</string>
    <string name="passwordvalidtextlength">Need to enter at least 7 character password</string>
    <string name="cfmpasswordvalidtext">Enter confirm password</string>
    <string name="cfmpasswordvalidtext1">Confirm password must be same as password</string>


    <string name="dont_have">"Don't have an account? "</string>
    <string name="already_account">Already have an account?</string>
    <string name="truelayer_terms"><u>end-user terms</u></string>
    <string name="truelayer_privacy"><u>privacy policy</u>.</string>

    <string name="login">Sign in</string>
    <string name="changepassword">Change Password</string>
    <string name="register">Join now</string>
    <string name="signup">Sign up</string>
    <string name="signin">Sign in</string>

    <string name="firstname">First name</string>
    <string name="firstnamevalidate">Enter Full Name</string>
    <string name="namevalidate">Enter your name</string>
    <string name="lastname">Last name</string>
    <string name="emailvalidate">Enter Email ID</string>
    <string name="lastnamevalidate">Enter last name</string>

    <string name="dob">Date of birth DD/MM/YYYY</string>
    <string name="dobvalidate">Select date of birth</string>
    <string name="mobile">Mobile</string>
    <string name="mobilevalid">Enter mobile number</string>
    <string name="mobilevalidate">Enter valid mobile number</string>
    <string name="emailadd">Email Address</string>
    <string name="addtionalinfo">Additional information</string>
    <string name="addressproof">Address Proof</string>
    <string name="title_activity_dashboard">DashboardActivity</string>


    <string name="Password_Minimum_length_is">Password Minimum length is 8</string>
    <string name="Email_not_complete_or_not_valid">Email not complete or not valid</string>
    <string name="Password_must_contain"><![CDATA[Password must contain numbers, letters & symbols]]></string>


    <string name="Welcome">Welcome !</string>
    <string name="you_dont_have_an_account">you don\'t have an account\nplease sign up first</string>
    <string name="Wrong_Password">Wrong Password</string>
    <string name="You_can_reset_password">You can reset password from:\nForgot Passwrod ?</string>
    <string name="Request_Error">Request Error</string>
    <string name="Please_Check_your_connection">Please Check your connection !</string>
    <string name="Server_Error">Server Error</string>
    <string name="Code">"Code: "</string>
    <string name="loading">Loading ...</string>
    <string name="close">Close</string>
    <string name="dialog_sub_title">Dialog Sub Title</string>
    <string name="dialog_message">Dialog Message</string>
    <string name="Authentication_Failed">Authentication Failed</string>
    <string name="please_try_again_later">please try again later !</string>
    <string name="Please_try_again">Please try again</string>

    <string name="Sign_Up">Sign Up</string>
    <string name="Welcome_back">Welcome back !</string>
    <string name="you_already_have_an_account_with_this_email">you already have an account with this email\nplease sign in</string>
    <string name="Sign_Up_Failed">Sign Up Failed</string>
    <string name="press_add_button_to_get_started">Press Add Button to get started</string>
    <string name="you_re_offline">You\'re Offline !</string>
    <string name="please_check_your_internet_connection">Please check your internet connection</string>
    <string name="Session_Expired">Session Expired !</string>
    <string name="You_are_signed_out_for_account_security">You are signed out for account security\nPlease sign in again.</string>
    <string name="error_no_internet">Oops!! You Are Not Connected To Internet</string>
    <string name="error_permission_required">Location Permission Required</string>
    <string name="lbl_tap_to_retry">Tap to Retry</string>
    <string name="msg_internet">There is something wrong with a proxy server or the address is incorrect</string>
    <string name="lbl_no_internet">No Internet Connection</string>


    <string name="lbl_dialog_title">Confirmation</string>
    <string name="lbl_yes">YES</string>
    <string name="lbl_no">NO</string>


    <string name="first_name_profile">First name <font color="#FF1010">*</font></string>
    <string name="verify_nav_text">Please check your email %s to verify your account, if you didn\'t receive your verification link, please check your junk/spam email folder or <u>resend confirmation email</u></string>
    <string name="limit_exceeded">Can select a maximum of %d images</string>
    <string name="error_null_cursor">Oops, something went wrong!</string>
    <string name="balance"><font color="#1dbf73">&#8364;</font>  500.00</string>
    <string name="credit_show"><font color="#1dbf73"><b>%s</b></font></string>
    <string name="tcapply"><u>*T&amp;C applied</u></string>
</resources>