<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.data.utship.fragment.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.data.utship.fragment.HomeFragment"
        android:label="@string/title_order"
        tools:layout="@layout/fragment_home" />


    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.data.utship.fragment.OrderHisFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_order_his" >
        <action
            android:id="@+id/action_navigation_notifications_to_navigation_profile"
            app:destination="@id/navigation_profile" />
    </fragment>
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.data.utship.fragment.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" >
        <!--<action
            android:id="@+id/navigation_profile"
            app:destination="@id/navigation_notifications"
            app:popUpToInclusive="true"
            app:popUpToSaveState="false"/>-->

        <action
            android:id="@+id/action_navigation_profile_to_navigation_notifications"
            app:destination="@id/navigation_notifications" />
    </fragment>

</navigation>